--- a/src/index.html
+++ b/src/index.html
@@ -16,18 +16,16 @@
     </div>
   </div>
 
-  <parallax-header>
-    <header class="header">
-      <div class="top-image">
-        <img
-          src="~/src/assets/media/images/tramvai_bandcamp_header_image.png"
-          alt="tramvai bandcamp header image"
-          height=180
-          width=975
-        >
-      </div>
-    </header>
-  </parallax-header>
+  <header class="header">
+    <parallax-image class="top-image">
+      <img
+        src="~/src/assets/media/images/tramvai_bandcamp_header_image.png"
+        alt="tramvai bandcamp header image"
+        height=180
+        width=975
+      >
+    </parallax-image>
+  </header>
 
   <nav class="navigation">
     <div class="wrapper">
