--- a/src/index.html
+++ b/src/index.html
@@ -39,12 +39,93 @@
       </ul>
     </div>
   </nav>
-  <div class="wrapper">
-    <p>
+  <div class="wrapper" id="content-wrapper">
+    <p style="display: none">
       <span>Current url is:</span>
       <span id="current-url"></span>
     </p>
 
+    <!--<available-groups style="display: none">-->
+    <available-groups>
+      <section class="groups">
+        <h3>
+          Groups:
+        </h3>
+        <ul>
+          <li>
+            <a href="/blablabla" target="_blank">
+              blabala group
+            </a>
+          </li>
+        </ul>
+      </section>
+    </available-groups>
+
+
+    <available-albums>
+      <h3>
+        Available albums:
+      </h3>
+      <ul>
+        <li>
+          <div class="album-cover">
+          <!--<img src="">-->
+          </div>
+          <a href="/group10/album-1">
+            blabala album 1
+          </a>
+        </li>
+        <li>
+        <div class="album-cover">
+          <!--<img src="">-->
+          </div>
+          <a href="/group10/album-2">
+            blabala album 2
+          </a>
+        </li>
+        <li>
+        <div class="album-cover">
+          <!--<img src="">-->
+          </div>
+          <a href="./album-1">
+            blabala album 3
+          </a>
+        </li>
+        <li>
+        <div class="album-cover">
+          <!--<img src="">-->
+          </div>
+          <a href="./album-1">
+            blabala album 4
+          </a>
+        </li>
+        <li>
+        <div class="album-cover">
+          <!--<img src="">-->
+          </div>
+          <a href="./album-1">
+            blabala album 5
+          </a>
+        </li>
+        <li>
+        <div class="album-cover">
+          <!--<img src="">-->
+          </div>
+          <a href="/group10/album-1">
+            blabala album 6
+          </a>
+        </li>
+        <li>
+        <div class="album-cover">
+          <!--<img src="">-->
+          </div>
+          <a href="./album-1">
+            blabala album 7
+          </a>
+        </li>
+      </ul>
+
+    </available-albums>
     <div class="audio-player">
     </div>
   </div>
