add loading loader placeholder; update stuff

--- a/src/index.html
+++ b/src/index.html
@@ -51,14 +51,26 @@
         <h3>
           Groups:
         </h3>
-        <ul>
-          <li>
-            <a href="/blablabla" target="_blank">
-              blabala group
-            </a>
-          </li>
-        </ul>
+        <div class="content">
+          <div class="loader"></div>
+
+        </div>
+
       </section>
+      <!--<div class="loader"></div>-->
+      <!--loading...-->
+      <!--<section class="groups">-->
+      <!--  <h3>-->
+      <!--    Groups:-->
+      <!--  </h3>-->
+      <!--  <ul>-->
+      <!--    <li>-->
+      <!--      <a href="/blablabla">-->
+      <!--        blabala group-->
+      <!--      </a>-->
+      <!--    </li>-->
+      <!--  </ul>-->
+      <!--</section>-->
     </available-groups>
 
 
@@ -69,55 +81,55 @@
       <ul>
         <li>
           <div class="album-cover">
-          <!--<img src="">-->
+            <!--<img src="">-->
           </div>
           <a href="/group10/album-1">
             blabala album 1
           </a>
         </li>
         <li>
-        <div class="album-cover">
-          <!--<img src="">-->
+          <div class="album-cover">
+            <!--<img src="">-->
           </div>
-          <a href="/group10/album-2">
+          <a href="/group11/88">
             blabala album 2
           </a>
         </li>
         <li>
-        <div class="album-cover">
-          <!--<img src="">-->
+          <div class="album-cover">
+            <!--<img src="">-->
           </div>
           <a href="./album-1">
             blabala album 3
           </a>
         </li>
         <li>
-        <div class="album-cover">
-          <!--<img src="">-->
+          <div class="album-cover">
+            <!--<img src="">-->
           </div>
           <a href="./album-1">
             blabala album 4
           </a>
         </li>
         <li>
-        <div class="album-cover">
-          <!--<img src="">-->
+          <div class="album-cover">
+            <!--<img src="">-->
           </div>
           <a href="./album-1">
             blabala album 5
           </a>
         </li>
         <li>
-        <div class="album-cover">
-          <!--<img src="">-->
+          <div class="album-cover">
+            <!--<img src="">-->
           </div>
           <a href="/group10/album-1">
             blabala album 6
           </a>
         </li>
         <li>
-        <div class="album-cover">
-          <!--<img src="">-->
+          <div class="album-cover">
+            <!--<img src="">-->
           </div>
           <a href="./album-1">
             blabala album 7
