add new event; change header image on url change (draft)

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
 
   <header class="header">
     <parallax-image class="top-image">
+      <div class="loader"></div>
+
       <img
         src="~/src/assets/media/images/tramvai_bandcamp_header_image.png"
         alt="tramvai bandcamp header image"
@@ -78,7 +80,10 @@
       <h3>
         Available albums:
       </h3>
-      <ul>
+      <div class="content">
+        <div class="loader"></div>
+      </div>
+      <ul style="display: none">
         <li>
           <div class="album-cover">
             <!--<img src="">-->
