update image change and ui

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
 <div class="page">
   <div class="app-bar">
     <div class="wrapper">
-      app bar
+      <a href="/">
+        app bar
+      </a>
     </div>
   </div>
 
