add about page link; add new image; change setTimeout value for showing images

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
         <li>
           <a href="/555/555">555/555</a>
         </li>
+        <li>
+          <a href="/about">about</a>
+        </li>
       </ul>
     </div>
   </nav>
