--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,24 @@
     <div class="wrapper">
       <ul class="nav-links">
         <li>
-          <a href="/">home</a>
+          <a href="/">
+            home
+          </a>
         </li>
         <li>
-          <a href="/555/555">555/555</a>
+          <a href="/555/555">
+            555/555
+          </a>
         </li>
         <li>
-          <a href="/about">about</a>
+          <a href="/about">
+            about
+          </a>
+        </li>
+        <li>
+          <a href="/group10">
+            groupName (group10)
+          </a>
         </li>
       </ul>
     </div>
