--- a/src/index.html
+++ b/src/index.html
@@ -63,15 +63,42 @@
       <span id="current-url"></span>
     </p>
 
-    <!--<available-groups style="display: none">-->
-    <available-groups>
+    <available-groups style="display: none">
+      <!--<available-groups>-->
       <section class="groups">
         <h3>
           Groups:
         </h3>
         <div class="content">
-          <div class="loader"></div>
+          <div class="loader" style="display: none"></div>
 
+          <ul>
+
+            <li>
+              <a href="/group10">
+                group10
+              </a>
+            </li>
+
+            <li>
+              <a href="/group11">
+                group11
+              </a>
+            </li>
+
+            <li>
+              <a href="/group12">
+                group12
+              </a>
+            </li>
+
+            <li>
+              <a href="/group13">
+                group13
+              </a>
+            </li>
+
+          </ul>
         </div>
 
       </section>
@@ -81,6 +108,7 @@
       <!--  <h3>-->
       <!--    Groups:-->
       <!--  </h3>-->
+
       <!--  <ul>-->
       <!--    <li>-->
       <!--      <a href="/blablabla">-->
@@ -98,65 +126,68 @@
       </h3>
       <div class="content">
         <div class="loader"></div>
+        <!--<ul style="display: none">-->
+        <div class="list-wrapper">
+          <ul>
+            <li>
+              <div class="album-cover">
+                <!--<img src="">-->
+              </div>
+              <a href="/group10/album-1">
+                blabala album 1
+              </a>
+            </li>
+            <li>
+              <div class="album-cover">
+                <!--<img src="">-->
+              </div>
+              <a href="/group11/88">
+                blabala album 2
+              </a>
+            </li>
+            <li>
+              <div class="album-cover">
+                <!--<img src="">-->
+              </div>
+              <a href="./album-1">
+                blabala album 3
+              </a>
+            </li>
+            <li>
+              <div class="album-cover">
+                <!--<img src="">-->
+              </div>
+              <a href="./album-1">
+                blabala album 4
+              </a>
+            </li>
+            <li>
+              <div class="album-cover">
+                <!--<img src="">-->
+              </div>
+              <a href="./album-1">
+                blabala album 5
+              </a>
+            </li>
+            <li>
+              <div class="album-cover">
+                <!--<img src="">-->
+              </div>
+              <a href="/group10/album-1">
+                blabala album 6
+              </a>
+            </li>
+            <li>
+              <div class="album-cover">
+                <!--<img src="">-->
+              </div>
+              <a href="./album-1">
+                blabala album 7
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <ul style="display: none">
-        <li>
-          <div class="album-cover">
-            <!--<img src="">-->
-          </div>
-          <a href="/group10/album-1">
-            blabala album 1
-          </a>
-        </li>
-        <li>
-          <div class="album-cover">
-            <!--<img src="">-->
-          </div>
-          <a href="/group11/88">
-            blabala album 2
-          </a>
-        </li>
-        <li>
-          <div class="album-cover">
-            <!--<img src="">-->
-          </div>
-          <a href="./album-1">
-            blabala album 3
-          </a>
-        </li>
-        <li>
-          <div class="album-cover">
-            <!--<img src="">-->
-          </div>
-          <a href="./album-1">
-            blabala album 4
-          </a>
-        </li>
-        <li>
-          <div class="album-cover">
-            <!--<img src="">-->
-          </div>
-          <a href="./album-1">
-            blabala album 5
-          </a>
-        </li>
-        <li>
-          <div class="album-cover">
-            <!--<img src="">-->
-          </div>
-          <a href="/group10/album-1">
-            blabala album 6
-          </a>
-        </li>
-        <li>
-          <div class="album-cover">
-            <!--<img src="">-->
-          </div>
-          <a href="./album-1">
-            blabala album 7
-          </a>
-        </li>
-      </ul>
 
     </available-albums>
     <div class="audio-player">
