--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,19 @@
   <div class="page">
     <div class="app-bar">
       <div class="wrapper">
+<!--        <button class="back-arrow-button">-->
+<!--          <svg fill='white' xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48">-->
+<!--            <path d="m274-450 248 248-42 42-320-320 320-320 42 42-248 248h526v60H274Z"/>-->
+<!--          </svg>-->
+<!--          back-->
+<!--        </button>-->
+        <div class="back-arrow">
+          <a href="#">
+            ← back
+          </a>
+<!--          ← back-->
+        </div>
+        <!--        ← back-->
         <a href="/">
           app bar
         </a>
@@ -125,8 +138,8 @@
         <!--  </ul>-->
         <!--</section>-->
       </available-groups>
-<!--      <available-albums style="display: none;">-->
-              <available-albums>
+      <!--      <available-albums style="display: none;">-->
+      <available-albums>
         <h3>
           Available albums:
         </h3>
