--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,16 @@
   <div class="page">
     <div class="app-bar">
       <div class="wrapper">
-<!--        <button class="back-arrow-button">-->
-<!--          <svg fill='white' xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48">-->
-<!--            <path d="m274-450 248 248-42 42-320-320 320-320 42 42-248 248h526v60H274Z"/>-->
-<!--          </svg>-->
-<!--          back-->
-<!--        </button>-->
-        <div class="back-arrow">
-          <a href="#">
-            ← back
-          </a>
-<!--          ← back-->
-        </div>
+        <!--        <button class="back-arrow-button">-->
+        <!--          <svg fill='white' xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48">-->
+        <!--            <path d="m274-450 248 248-42 42-320-320 320-320 42 42-248 248h526v60H274Z"/>-->
+        <!--          </svg>-->
+        <!--          back-->
+        <!--        </button>-->
+        <a class="back-arrow" href="#">
+          ← back
+        </a>
+        <!--          ← back-->
         <!--        ← back-->
         <a href="/">
           app bar
