extract backButton into a component

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,12 @@
         <!--          </svg>-->
         <!--          back-->
         <!--        </button>-->
-        <a class="back-arrow" href="#">
-          ← back
-        </a>
+        <back-button>
+          <a class="back-arrow" href="#">
+            ← back
+          </a>
+        </back-button>
+
         <!--          ← back-->
         <!--        ← back-->
         <a href="/">
