--- a/src/index.html
+++ b/src/index.html
@@ -27,16 +27,25 @@
     <header class="header">
       <parallax-image class="top-image">
         <div class="loader"></div>
-        <img
-            src="~/src/assets/media/images/tramvai_bandcamp_header_image.png"
-            alt="tramvai bandcamp header image"
-            height=180
-            width=975
-        >
+        <div class="image-wrapper">
+          <img
+              src="~/src/assets/media/images/tramvai_bandcamp_header_image.png"
+              alt="tramvai bandcamp header image"
+              height=180
+              width=975
+          >
+          <!--          <div class="text-wrapper">-->
+          <!--            &lt;!&ndash;            maybe some 404 custom page error text&ndash;&gt;-->
+          <!--            <span>-->
+          <!--              404-->
+          <!--            </span>-->
+          <!--          </div>-->
+        </div>
       </parallax-image>
     </header>
     <div id="swappable">
-      <nav class="navigation visible">
+      <nav class="navigation">
+        <!--        <nav class="navigation visible">-->
         <div class="wrapper">
           <ul class="nav-links">
             <li>
@@ -118,20 +127,6 @@
               </ul>
             </div>
           </section>
-          <!--<div class="loader"></div>-->
-          <!--loading...-->
-          <!--<section class="groups">-->
-          <!--  <h3>-->
-          <!--    Groups:-->
-          <!--  </h3>-->
-          <!--  <ul>-->
-          <!--    <li>-->
-          <!--      <a href="/blablabla">-->
-          <!--        blabala group-->
-          <!--      </a>-->
-          <!--    </li>-->
-          <!--  </ul>-->
-          <!--</section>-->
         </available-groups>
         <!--      <available-albums style="display: none;">-->
         <available-albums>
