lint; update styles

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
           <span id="current-url"></span>
         </p>
         <album-detail>
-          <div class="album-cover"></div>
+          <album-cover></album-cover>
           <div class="album-info">
             <div class="album-name">
               Album name
