lint; add components; has errors

--- a/src/index.html
+++ b/src/index.html
@@ -44,38 +44,39 @@
       </parallax-image>
     </header>
     <div id="swappable">
-      <nav class="navigation">
-        <!--        <nav class="navigation visible">-->
-        <div class="wrapper">
-          <ul class="nav-links">
-            <li>
-              <a href="/">
-                home
-              </a>
-            </li>
-            <li>
-              <a href="/555/555">
-                555/555
-              </a>
-            </li>
-            <li>
-              <a href="/about">
-                about
-              </a>
-            </li>
-            <li>
-              <a href="/group10">
-                groupName (group10)
-              </a>
-            </li>
-            <li>
-              <a href="/group10/album-1">
-                album page
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <main-navigation class="visible">
+        <nav class="navigation">
+          <div class="wrapper">
+            <ul class="nav-links">
+              <li>
+                <a href="/">
+                  home
+                </a>
+              </li>
+              <li>
+                <a href="/555/555">
+                  555/555
+                </a>
+              </li>
+              <li>
+                <a href="/about">
+                  about
+                </a>
+              </li>
+              <li>
+                <a href="/group10">
+                  groupName (group10)
+                </a>
+              </li>
+              <li>
+                <a href="/group10/album-1">
+                  album page
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </main-navigation>
       <div class="wrapper" id="content-wrapper">
         <p style="display: none">
           <span>Current url is:</span>
