add preload link for some icons

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/styles/index.scss">
   <title>routing-player</title>
+  <!--  preload some stuff (svg's)-->
+  <link rel="preload" href="~/src/assets/media/images/icons/note-icon.svg" as="image">
+  <link rel="preload" href="~/src/assets/media/images/icons/loading.svg" as="image">
+  <!--  <link rel="preload" href="~/src/assets/media/images/icons/play.svg" as="image">-->
+  <!--  <link rel="preload" href="~/src/assets/media/images/icons/pause.svg" as="image">-->
+  <!--  <link rel="preload" href="~/src/assets/media/images/icons/next.svg" as="image">-->
 </head>
 <body>
   <div class="page">
