--- a/src/index.html
+++ b/src/index.html
@@ -59,23 +59,23 @@
                   home
                 </a>
               </li>
+<!--              <li>-->
+<!--                <a href="/555/555">-->
+<!--                  555/555-->
+<!--                </a>-->
+<!--              </li>-->
+<!--              <li>-->
+<!--                <a href="/about">-->
+<!--                  about-->
+<!--                </a>-->
+<!--              </li>-->
+<!--              <li>-->
+<!--                <a href="/group10">-->
+<!--                  groupName (group10)-->
+<!--                </a>-->
+<!--              </li>-->
               <li>
-                <a href="/555/555">
-                  555/555
-                </a>
-              </li>
-              <li>
-                <a href="/about">
-                  about
-                </a>
-              </li>
-              <li>
-                <a href="/group10">
-                  groupName (group10)
-                </a>
-              </li>
-              <li>
-                <a href="/group10/album-1">
+                <a href="/group10/album-1" custom-link>
                   album page
                 </a>
               </li>
@@ -88,80 +88,6 @@
           <span>Current url is:</span>
           <span id="current-url"></span>
         </p>
-        <album-detail>
-          <album-cover></album-cover>
-          <div class="album-info">
-            <div class="album-name">
-              Album name
-            </div>
-            <div class="group-name">
-              Group name
-            </div>
-            <div class="date-of-release">
-              22.03.1996
-            </div>
-          </div>
-        </album-detail>
-        <available-groups style="display: none">
-          <!--<available-groups>-->
-          <section class="groups">
-            <h3>
-              Groups:
-            </h3>
-            <div class="content">
-              <div class="loader" style="display: none"></div>
-              <ul>
-                <li>
-                  <a href="/group10">
-                    group10
-                  </a>
-                </li>
-                <li>
-                  <a href="/group11">
-                    group11
-                  </a>
-                </li>
-                <li>
-                  <a href="/group12">
-                    group12
-                  </a>
-                </li>
-                <li>
-                  <a href="/group13">
-                    group13
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </section>
-        </available-groups>
-        <!--      <available-albums style="display: none;">-->
-        <available-albums>
-          <h3>
-            Available albums:
-          </h3>
-          <div class="content">
-            <div class="loader"></div>
-            <div class="list-wrapper">
-            </div>
-          </div>
-        </available-albums>
-        <div class="audio-player">
-        </div>
-      </div>
-    </div>
-    <div class="funin-fixed-player">
-      <div class="wrapper">
-        <!--      <div class="play-button">-->
-        <!--      </div>-->
-        <div class="controls">
-          <div class="prev"></div>
-          <div class="play-pause"></div>
-          <div class="next"></div>
-        </div>
-        <div class="song-info">
-          current song — current songname
-        </div>
       </div>
     </div>
   </div>
