--- a/src/index.html
+++ b/src/index.html
@@ -55,8 +55,18 @@
           <div class="wrapper">
             <ul class="nav-links">
               <li>
-                <a href="/">
+                <a href="/" custom-link=>
                   home
+                </a>
+              </li>
+              <li>
+                <a href="/about" custom-link=>
+                  about
+                </a>
+              </li>
+              <li>
+                <a href="/with-slider" custom-link=>
+                  with-slider
                 </a>
               </li>
 <!--              <li>-->
