--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,21 @@
       </parallax-image>
     </header>
     <div id="swappable">
+      <div class="navigation-menu" id="mobile-menu">
+        <style>
+
+        </style>
+          <div class="avatar round"></div>
+        <div class="username">
+          @ivan
+        </div>
+        <ul>
+          <li><a href="/me">profile</a></li>
+          <li><a href="/settings" custom-link="">settings</a></li>
+<!--          <li><a href=""></a></li>-->
+          <li><div id="theme-toggle">toggle theme</div></li>
+        </ul>
+      </div>
       <main-navigation class="visible">
         <nav class="navigation">
           <div class="wrapper">
@@ -59,6 +74,7 @@
                   home
                 </a>
               </li>
+
               <li>
                 <a href="/about" custom-link=>
                   about
@@ -69,7 +85,8 @@
                   with-slider
                 </a>
               </li>
-<!--              <li>-->
+<!--
+     <li>-->
 <!--                <a href="/555/555">-->
 <!--                  555/555-->
 <!--                </a>-->
@@ -88,6 +105,11 @@
                 <a href="/group10/album-1" custom-link>
                   album page
                 </a>
+              </li>
+              <li>
+                <div id="open-settings">
+                  open settings
+                </div>
               </li>
             </ul>
           </div>
