--- a/src/index.html
+++ b/src/index.html
@@ -70,18 +70,18 @@
           <div class="wrapper">
             <ul class="nav-links">
               <li>
-                <a href="/" custom-link=>
+                <a href="/" custom-link data-ripple-dark="true">
                   home
                 </a>
               </li>
 
               <li>
-                <a href="/about" custom-link=>
+                <a href="/about" custom-link data-ripple-light="true">
                   about
                 </a>
               </li>
               <li>
-                <a href="/with-slider" custom-link=>
+                <a href="/with-slider" custom-link data-ripple-light="dark">
                   with-slider
                 </a>
               </li>
